TL-9780 block_current_learning: Layout issues in confined space / mobile
Reviewed-on: https://review.totaralms.com/12423
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/blocks/current_learning/less/styles.less
+++ b/blocks/current_learning/less/styles.less
@@ -44,6 +44,8 @@
             line-height: 28px;
             margin: 0;
             padding: 0 0 0 26px;
+            display: inline-block;
+            width: 100%;
 
             > span {
                 padding: 0 5px;
@@ -220,6 +222,9 @@
     padding: @padding-vertical @padding-horizontal;
     background-color: @bg-default;
     border-radius: @border-radius-large;
+    clear: both;
+    display: inline-block;
+    width: 100%;
 
     .flex-icon {
         float: right;
